@@ -54,7 +54,7 @@
 
         <t>The WAS can also choose to either trust the WebKDC to vouch for
         the identity of a user, or it can request the WebKDC use an
-        authenticator, such as a Kerberos V5 service request (krb5_mk_req)
+        authenticator such as a Kerberos V5 service request (KRB_AP_REQ)
         that it can verify using its own Kerberos V5 keys.</t>
 
         <section anchor='compua' title='User-Agent (UA)'>
@@ -244,14 +244,14 @@
           protocol is needed.  For this purpose, we use Kerberos V5 and
           TLS/SSL to bootstrap and get the session keys.  The WAS that
           needs a session key will post an XML message to the WebKDC
-          requesting a service token.  This message contains the result of
-          krb5_mk_req call for the WebKDC's server principal, which the
-          WebKDC uses to authenticate the server making the request.  The
-          WebKDC will then send back the service token and a copy the
-          session key that is also encrypted (in the WebKDC's key) inside
-          of the service token.  The WAS will need both to make future
-          requests to the WebKDC.  The whole transaction itself is
-          protected with TLS or SSL.</t>
+          requesting a service token.  This message contains a KRB_AP_REQ
+          for the WebKDC's server principal, which the WebKDC uses to
+          authenticate the server making the request.  The WebKDC will
+          then send back the service token and a copy the session key that
+          is also encrypted (in the WebKDC's key) inside of the service
+          token.  The WAS will need both to make future requests to the
+          WebKDC.  The whole transaction itself is protected with TLS or
+          SSL.</t>
 
           <t>There are no long term keys stored on the WebKDC itself other
           its own private key.  Once the WAS obtains the service token and
@@ -426,9 +426,8 @@
           <list style='numbers'>
             <t>The WAS connects directly to the WebKDC and requests a
             service token and session key to use for further requests.  It
-            includes in this request the results of krb5_mk_req for the
-            WebKDC's service principal, using the WAS's private Kerberos
-            key.</t>
+            includes in this request a KRB_AP_REQ for the WebKDC's service
+            principal, using the WAS's private Kerberos key.</t>
 
             <t>The WebKDC authenticates the WAS server via Kerberos V5 and
             returns the webkdc-service token and corresponding session
@@ -489,9 +488,10 @@
             ensure it is fresh.  It will then look at the subject
             authenticator-type in the token to see if it needs to verify
             the subject.  If the authenticator-type is krb5, it uses its
-            Kerberos keytab to verify the identity of the subject.  The
-            subject will, in this case, be the result of a krb5_mk_req
-            call.
+            Kerberos keytab to verify the identity of the subject.  In
+            this case, the token will include a KRB_AP_REQ for the
+            Kerberos identity of the WAS in the subject authenticator data
+            field of the id token.
             <vspace blankLines='1' />
             After verifying the subject if desired, the WAS creates an app
             token based on the id token and puts it into a cookie to
@@ -1597,9 +1597,8 @@
 
             <t hangText='sad (binary)'>
             <vspace blankLines='0'/>Subject authenticator data.  If the sa
-            is krb5, this is the output of krb5_mk_req using the same
-            Kerberos V5 principal as the webkdc-service token's
-            subject.</t>
+            is krb5, this is a KRB_AP_REQ for the same Kerberos V5
+            principal as the webkdc-service token's subject.</t>
 
             <t hangText='t (string)'>
             <vspace blankLines='0'/>The token type.  Currently recognized
@@ -1776,10 +1775,10 @@
           <t>All attributes are AES-encrypted in the webkdc-service token
           session key.</t>
 
-          <t>If "at" is krb5, then "sad" (subject authenticator data) is
-          the result of a call to krb5_mk_req for the WAS service
-          principal (as determined from the subject of the webkdc-service
-          token) using the user's TGT from a krb5 webkdc-procy token.</t>
+          <t>If "at" is krb5, then "sad" (subject authenticator data) is a
+          KRB_AP_REQ for the WAS service principal (as determined from the
+          subject of the webkdc-service token) using the user's TGT from a
+          krb5 webkdc-procy token.</t>
 
           <t>If at is webkdc, we are trusting the webkdc and "s" contains
           the authenticated user's identity (generally as a Kerberos V5
@@ -2206,6 +2205,11 @@
           returned in response to &lt;requestToken> so that the WebLogin
           component can make decisions based on whether the WAS requested
           an id token or a proxy token.</t>
+
+          <t hangText='2.13 (2010-05-15, rra)'>
+          <vspace blankLines='0'/>Replace all mentions of krb5_mk_req with
+          KRB_AP_REQ, which is the correct protocol term for the results
+          of a krb5_mk_req call.</t>
         </list>
       </t>
     </section>
